# AobaV2

./: .gitignore  AobaV2.sln  README.md  docker-compose.yml  publish.nu
.github/workflows/: .woodpecker.yaml  release.yaml
AobaClient/: .dockerignore  .env  Cargo.toml  Dioxus.toml  Dockerfile  build.rs
AobaClient/assets/style/: colors.scss  dx-components.scss  inputs.scss  main.scss  mixins.scss  modal.scss  nav.scss
AobaClient/src/: env.rs  main.rs  route.rs  rpc.rs
AobaClient/src/components/: context_menu.rs  icons.rs  layout_groups.rs  media_grid.rs  media_item.rs  media_item_context_menu_items.rs  metrics_token.rs  mod.rs  modal.rs  navbar.rs  notif.rs  pagination.rs  passkey.rs  search.rs  selection_bar.rs  upload_area.rs
AobaClient/src/components/basic/: button.rs  input.rs  mod.rs
AobaClient/src/components/context_menu/: component.rs  mod.rs  props.rs  style.css
AobaClient/src/components/radio_group/: component.rs  style.css
AobaClient/src/contexts/: auth_context.rs  mod.rs  selection_context.rs
AobaClient/src/layouts/: basic_layout.rs  main_layout.rs  mod.rs
AobaClient/src/models/: media.rs
AobaClient/src/views/: home.rs  login.rs  media.rs  mod.rs  settings.rs
AobaCore/: AccountsService.cs  AobaCore.csproj  AobaIndexCreationService.cs  AobaService.cs  Extensions.cs  MediaService.cs
AobaCore/Models/: ITagRule.cs  Media.cs  MediaThumbnail.cs  MeidaThumbnail.cs  PagedResult.cs  RegexTagRule.cs  SteamAppIdTagRule.cs  SteamAppLookupTagRule.cs  UploadInfo.cs  User.cs
AobaCore/Services/: AccountsService.cs  AobaIndexCreationService.cs  AobaService.cs  AutoTagger.cs  HostInfo.cs  S3MediaService.cs  S3MigrationService.cs  ThumbnailService.cs
AobaCore/Tools/: AVIFTools.cs  AvifColorInfo.cs
AobaServer/: .gitignore  AobaAuthenticationHandler.cs  AobaServer.csproj  Auth.json  AuthInfo.cs  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
AobaServer/Auth/: AobaAuthenticationHandler.cs  MetricsTokenValidator.cs
AobaServer/Controllers/: AuthController.cs  MediaController.cs
AobaV2/: AobaAuthenticationHandler.cs  AobaV2.csproj  Program.cs  appsettings.json  libman.json  package-lock.json  package.json  tsconfig.json
(+38 files in other folders)
